--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  shared_preferences: ^2.1.1
+  csv: ^6.0.0
+  path_provider: ^2.1.1
+  share_plus: ^10.0.2
+  pdf: ^3.10.7
+  file_picker: ^8.0.2
+  fl_chart: ^0.68.0
   cupertino_icons: ^1.0.8
+  intl: ^0.18.1 
 
 dev_dependencies:
   flutter_test:
@@ -58,8 +67,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/logo.png
+    - assets/keychain.png
+    - assets/smartwatch.png
+    - assets/bracelet.png
+    - assets/earrings.png
+    - assets/bagcharm.png
+    - assets/necklace.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
